[package]
name = "raycast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# image = { version = "0.24", default-features = false, features = ["png"] }
# minifb = { version = "0.24", default-features = false, features = ["x11"] }
lazy_static = "1.4"
sdl2 = "0.35.2"
rand = { version = "0.8" }
state_bc = {path = "crates/state_bc"}
util = {path = "crates/util"}
byteorder = "1"
anyhow = "1"

[build-dependencies]
state_bc = {path = "crates/state_bc", features = ["compiler"]}

[profile.release]
opt-level = 3     # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
#panic = "abort"     # Abort on panic
# strip = true   
debug = true

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "crates/state_bc",
    "crates/util"
]