[package]
name = "raycast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
anyhow = "1"
lazy_static = "1.4"
nom_locate = { version = "4" }
nom = {version = "7" }
oorandom = "11"
sdl2 = "0.35.2"

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
oorandom = { workspace = true }
sdl2 = { workspace = true }
state_bc = {path = "crates/state_bc"}

[build-dependencies]
state_bc = {path = "crates/state_bc", features = ["compiler"]}

[profile.release]
opt-level = 3     # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
#panic = "abort"     # Abort on panic
# strip = true   
debug = true

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "crates/state_bc",
]